<resources>
    <string name="app_name">Tahliluk</string>
    <string name="app_name_splash">Tahliluk</string>
    <string name="sign_in">Sign in</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="SplashScreen_AppDesc">Your medical analysis at your home</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="verify">Verify</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="new_password">New password</string>
    <string name="reservations">Reservations</string>
    <string name="labs">Labs</string>
    <string name="reserve">Reserve</string>
    <string name="chat">Chat</string>
    <string name="get_ready">Get Ready</string>
    <string name="checkups">Checkups</string>
    <string name="what_re_you_looking_for">What\'re you looking for ?</string>
    <string name="select_lab">Select a Lab</string>
    <string name="DateOf_Birth">Select birthdate</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>
    <string name="please_wait">Please wait</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">online</string>
    <string name="old_password">Old password</string>
    <string name="change">Change</string>
    <string name="change_phone">Change phone</string>
    <string name="new_phone_number">New phone number</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="about_us">About us</string>
    <string name="logout">Log out</string>
    <string name="title_activity_reserve">ReserveActivity</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="welcome">Welcome,</string>
    <string name="select_a_language">Select a language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="save">Save</string>
    <string name="enter_phone_number">Enter phone Number</string>
    <string name="enter_password">Enter password</string>
    <string name="must_be_11_digits">Must be 11 digits</string>
    <string name="this_phone_number_does_not_have_an_account">This phone number doesn\'t have an account !</string>
    <string name="error">Error</string>
    <string name="unable_to_updated_token">Unable to updated token</string>
    <string name="less_than_7_digits">Less than 7 digits</string>
    <string name="not_the_same">Not the same !</string>
    <string name="something_wrong">Something wrong !</string>
    <string name="unable_to_reset_your_password">Unable to reset your password</string>
    <string name="unable_to_sign_in">Unable to sign in</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="this_phone_number_already_have_an_account">This phone number already have an account !</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="wrong_code">Wrong Code !</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="check_current_password">Check password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="can_not_update_information">Can\'t update information</string>
    <string name="unable_to_sign_out">Unable to sign out</string>
    <string name="openMap">Open map</string>
    <string name="show_on_map">Show on map</string>
    <string name="open_chat">Chat</string>
    <string name="search_labs">search in Labs...</string>
    <string name="search_analytics">Search in Analytics</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="location_error_message">Unable to get your Location. \nCheck your Internet connection and GPS signal then try again.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="no_analytics_found">No Analytics have been added yet</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="current_location">"Your current location "</string>
    <string name="Additional_instructions">Additional instructions</string>
    <string name="type_here">type here</string>
    <string name="choose_lab">choose\nLab</string>
    <string name="choose_analytics">choose\nAnalytics</string>
    <string name="choose_Address"> Choose\nAddress</string>
    <string name="confirm_Request"> Confirm\nRequest</string>
    <string name="change_location">"change address "</string>
    <string name="pin">pin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="selected_analyses">selected analytics</string>
    <string name="selectedaddress">Selected Address</string>
    <string name="lbl_subtotal">sub total</string>
    <string name="lbl_Home_visit_cost">"Home visit cost "</string>
    <string name="lbl_total_amount">total amount</string>
    <string name="The_cost_of_the_analysis">The cost of the analysis</string>
    <string name="Tv_Analytics">Analytics</string>
    <string name="Visiting_expenses">Visiting expenses</string>
    <string name="patient_information">patient name</string>
    <string name="egyptian_currency">EGP</string>
    <string name="send_request">Send Request</string>
    <string name="succcessConfirmation">We are done reserving the lab will contact you soon using this number</string>
    <string name="no_reservations">No reservations added yet!</string>
    <string name="reserve_now">reserve now</string>
    <string name="order_details">order details</string>
    <string name="visit_price" translatable="false">"50.0EGP"</string>
    <string name="order_date">Order Date :</string>
    <string name="order_state">Order State :</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="labName">Lab name :</string>
    <string name="pending">Pending</string>
    <string name="inprogress">in Progress</string>
    <string name="completed">completed</string>
    <string name="getReady">Get Ready</string>
    <string name="analyses_result">Analysis Result</string>
    <string name="know_result">Show Result</string>
    <string name="amr_medhat_riad">Amr Medhat Riad</string>
    <string name="amr_sherif_mohamed">Amr Sherif Mohamed</string>
    <string name="abdallah_said_zakaria">Abdallah Said Zakaria</string>
    <string name="mohamed_ibrahim_maher">Mohamed Ibrahim Maher</string>
    <string name="abdelrahman_amr_moustafa">Abdelrahman Amr Moustafa</string>


</resources>