<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_content_bottom"
    tools:context=".fragments.ReserveAddressFragment">

 <TextView
     android:id="@+id/tv_currentLocation"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/_52sdp"
     android:fontFamily="@font/ntailub"
     android:text="@string/current_location"
     android:textColor="@color/primary_text"
     android:textSize="@dimen/_15ssp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.047"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <ProgressBar
     android:id="@+id/progressBar"
     android:layout_width="@dimen/_25sdp"
     android:layout_height="@dimen/_25sdp"
     android:layout_gravity="center"
     android:layout_marginTop="32dp"
     android:visibility="invisible"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.467"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/tv_currentLocation" />

 <TextView
     android:id="@+id/tv_address"
     android:layout_width="@dimen/_270sdp"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/_16sdp"
     android:layout_marginTop="24dp"
     android:layout_marginEnd="337dp"
     android:drawablePadding="@dimen/_2sdp"
     android:gravity="center"
     android:maxWidth="@dimen/_270sdp"
     android:maxLines="2"
     android:text=""
     android:textColor="@color/black"
     android:textSize="@dimen/_10sdp"
     app:drawableStartCompat="@drawable/ic_pin"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/tv_currentLocation" />

 <TextView
     android:id="@+id/tv_changeLocation"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="108dp"
     android:layout_marginTop="8dp"
     android:text="@string/change_location"
     android:textColor="@color/error"
     app:layout_constraintEnd_toEndOf="@+id/tv_address"
     app:layout_constraintStart_toEndOf="@+id/tv_note"
     app:layout_constraintTop_toBottomOf="@+id/tv_address" />

 <TextView
     android:id="@+id/tv_note"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/_16sdp"
     android:layout_marginTop="@dimen/_22sdp"
     android:layout_marginEnd="337dp"
     android:text="@string/Additional_instructions"
     android:textColor="@color/primary_text"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/tv_address" />

 <EditText
     android:id="@+id/et_notes"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_100sdp"
     android:layout_marginStart="@dimen/_16sdp"
     android:layout_marginTop="@dimen/_16sdp"
     android:layout_marginEnd="@dimen/_16sdp"
     android:background="@drawable/background_input_note"
     android:color="@color/primary"
     android:elevation="@dimen/_1sdp"
     android:fontFamily="@font/ntailub"
     android:gravity="top"
     android:hint="@string/type_here"
     android:imeOptions="actionNext"
     android:importantForAutofill="no"
     android:inputType="text"
     android:padding="@dimen/_8sdp"
     android:textColor="@color/secondary_text"
     android:textColorHint="@color/third_text"
     android:textSize="@dimen/_13ssp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/tv_note" />


 <com.google.android.material.button.MaterialButton
     android:id="@+id/btn_save_address"
     android:layout_width="@dimen/_150sdp"
     android:layout_height="@dimen/_50sdp"
     android:layout_gravity="bottom|center"
     android:background="@drawable/button_sheet_button"
     android:fontFamily="@font/ntailub"
     android:text="@string/save"
     android:textColor="@color/white"
     android:textSize="@dimen/_20sdp"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/et_notes" />


</androidx.constraintlayout.widget.ConstraintLayout>
