<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapsFragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"

         />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:src="@drawable/ic_pin"
        android:contentDescription="@string/pin"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.498"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@color/white"
        map:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="46dp" >

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:maxWidth="@dimen/_70sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/current_location"
            android:textStyle="bold"
            android:fontFamily="@font/ntailub"
            android:textSize="@dimen/_15ssp"
            android:maxHeight="@dimen/_50sdp"
            android:layout_margin="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_address"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_sheet_button"
            android:fontFamily="@font/ntailub"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
             />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>






