<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_content_bottom"
    tools:context=".fragments.RequestReserveAnalyticsFragment">

    <android.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:queryHint="@string/search_analytics"
        android:searchIcon="@drawable/ic_search"
        android:theme="@style/SearchViewStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="@dimen/_220sdp"
        app:tint="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_analytics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TV_noAnalytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/ntailub"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/no_analytics_found"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_analytics"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/button_sheet_button"
        android:fontFamily="@font/ntailub"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:visibility="visible" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center" />


</FrameLayout>