<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/white_background"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/background_ovalShape"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/background_oval_shape_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/background_ovalShape"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/background_ovalShape">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/background_input"
                android:color="@color/primary"

                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/ntailub"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/third_text"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/background_input"
                android:color="@color/primary"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/ntailub"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/third_text"
                android:textSize="@dimen/_16ssp" />


            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/background_input"
                android:color="@color/primary"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/ntailub"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="11"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/third_text"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/background_input"
                android:color="@color/primary"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/ntailub"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/third_text"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/background_input"
                android:color="@color/primary"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/ntailub"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/secondary_text"
                android:textColorHint="@color/third_text"
                android:textSize="@dimen/_16ssp" />


            <RadioGroup
                android:id="@+id/rd_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/Male"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/Female"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:animateLayoutChanges="true"
                app:layout_constraintTop_toBottomOf="@id/confirmPassword">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginStart="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_45sdp"
                    android:fontFamily="@font/ntailub"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_25sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frameLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ntailub"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ntailub"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>