<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.ProfileFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white_background"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_changeLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_language"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="start|center"
                android:text="@string/language"
                android:textAllCaps="false"
                android:drawableTint="@color/primary"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_darkMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_dark_mode"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="start|center"
                android:checked="false"
                android:drawableTint="@color/primary"
                android:text="@string/dark_mode"
                app:switchMinWidth="@dimen/_35sdp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_aboutUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_about_us"
                android:drawablePadding="@dimen/_6sdp"
                android:gravity="start|center"
                android:text="@string/about_us"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_60sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/thebes_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>